[gd_scene load_steps=30 format=3 uid="uid://ctmuegd6blnu0"]

[ext_resource type="Script" uid="uid://b7qvoec7lij8o" path="res://scenes/component/tower_command.gd" id="1_dm4w8"]
[ext_resource type="Texture2D" uid="uid://b4rt7ptupj3pi" path="res://assets/hud/tower_command.png" id="2_alm3x"]
[ext_resource type="PackedScene" uid="uid://blqr6m4m3rxxy" path="res://scenes/component/command_box.tscn" id="3_1sy3o"]
[ext_resource type="PackedScene" uid="uid://cal7thrqynpmy" path="res://scenes/component/command_button.tscn" id="3_n3e8h"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1sy3o"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_6qj66"]
atlas = ExtResource("2_alm3x")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxa6x"]
atlas = ExtResource("2_alm3x")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ular1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qj66")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxa6x")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0h00t"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_alm3x"]
atlas = ExtResource("2_alm3x")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3e8h"]
atlas = ExtResource("2_alm3x")
region = Rect2(64, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_dm4w8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_alm3x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3e8h")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_te83m"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_1sy3o"]
atlas = ExtResource("2_alm3x")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_te83m"]
atlas = ExtResource("2_alm3x")
region = Rect2(128, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_alm3x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sy3o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_te83m")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vi7dh"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_ular1"]
atlas = ExtResource("2_alm3x")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljvea"]
atlas = ExtResource("2_alm3x")
region = Rect2(192, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_hgl8g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ular1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljvea")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6qj66"]
light_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_0h00t"]
atlas = ExtResource("2_alm3x")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi7dh"]
atlas = ExtResource("2_alm3x")
region = Rect2(256, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_n3e8h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h00t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi7dh")
}],
"loop": true,
"name": &"hover",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0h00t"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_alm3x"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3e8h"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_te83m"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1sy3o"]
size = Vector2(64, 64)

[node name="TowerCommand" type="Node2D"]
script = ExtResource("1_dm4w8")

[node name="Menu" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="AnimatedSprite2DUpgrade" type="AnimatedSprite2D" parent="Menu"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_1sy3o")
position = Vector2(72, -8)
sprite_frames = SubResource("SpriteFrames_ular1")
autoplay = "default"

[node name="AnimatedSprite2DWeaponModifier" type="AnimatedSprite2D" parent="Menu"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_0h00t")
position = Vector2(-72, -8)
sprite_frames = SubResource("SpriteFrames_dm4w8")
autoplay = "default"

[node name="AnimatedSprite2DAttackModifier" type="AnimatedSprite2D" parent="Menu"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_te83m")
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_alm3x")
autoplay = "default"

[node name="AnimatedSprite2DDamageModifier" type="AnimatedSprite2D" parent="Menu"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_vi7dh")
position = Vector2(-72, 64)
sprite_frames = SubResource("SpriteFrames_hgl8g")
autoplay = "default"

[node name="AnimatedSprite2DTarget" type="AnimatedSprite2D" parent="Menu"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_6qj66")
position = Vector2(72, 64)
sprite_frames = SubResource("SpriteFrames_n3e8h")
animation = &"hover"
autoplay = "default"

[node name="Area2DUpgrade" type="Area2D" parent="Menu"]
position = Vector2(72, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu/Area2DUpgrade"]
shape = SubResource("RectangleShape2D_0h00t")

[node name="Area2DWeaponModifier" type="Area2D" parent="Menu"]
position = Vector2(-72, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu/Area2DWeaponModifier"]
shape = SubResource("RectangleShape2D_alm3x")

[node name="Area2DAttackModifier" type="Area2D" parent="Menu"]
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu/Area2DAttackModifier"]
shape = SubResource("RectangleShape2D_n3e8h")

[node name="Area2DDamageModifier" type="Area2D" parent="Menu"]
position = Vector2(-72, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu/Area2DDamageModifier"]
shape = SubResource("RectangleShape2D_te83m")

[node name="Area2DTarget" type="Area2D" parent="Menu"]
position = Vector2(72, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu/Area2DTarget"]
shape = SubResource("RectangleShape2D_1sy3o")

[node name="GunUpgrades" parent="." instance=ExtResource("3_1sy3o")]
unique_name_in_owner = true
visible = false
position = Vector2(-64, -40)

[node name="TowerCommandButtonPistol" parent="GunUpgrades" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
icon = &"check"
label = "Pistol"

[node name="TowerCommandButtonSemiAutomatic" parent="GunUpgrades" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
price = 100
label = "Semi Automatic"

[node name="TowerCommandButtonMachineGun" parent="GunUpgrades" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
price = 200
label = "Machine Gun"

[node name="LaserUpgrades" parent="." instance=ExtResource("3_1sy3o")]
unique_name_in_owner = true
visible = false
position = Vector2(-64, -40)

[node name="TowerCommandButtonLaserShot" parent="LaserUpgrades" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
icon = &"check"
label = "Laser Shot"

[node name="TowerCommandButtonLaserBeam" parent="LaserUpgrades" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
price = 100
label = "Laser Beam"

[node name="TowerCommandButtonJorb" parent="LaserUpgrades" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
price = 200
label = "Jorb"

[node name="SwipeUpgrades" parent="." instance=ExtResource("3_1sy3o")]
unique_name_in_owner = true
visible = false
position = Vector2(-64, -40)

[node name="TowerCommandButtonTail" parent="SwipeUpgrades" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
label = "Tail Swipe"

[node name="TowerCommandButtonBat" parent="SwipeUpgrades" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
price = 100
label = "Wooden Bun Kisser"

[node name="TowerCommandButtonLargeBat" parent="SwipeUpgrades" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
price = 200
label = "Metal Bun Kisser"

[node name="WeaponModifiers" parent="." instance=ExtResource("3_1sy3o")]
unique_name_in_owner = true
visible = false
position = Vector2(-208, -40)

[node name="TowerCommandButtonWeaponSpeed" parent="WeaponModifiers" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
price = 50
label = "Speed"

[node name="TowerCommandButtonWeaponSpread" parent="WeaponModifiers" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
price = 100
label = "Spread"

[node name="TowerCommandButtonWeaponCluster" parent="WeaponModifiers" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
price = 100
label = "Cluster"

[node name="AttackModifiers" parent="." instance=ExtResource("3_1sy3o")]
unique_name_in_owner = true
visible = false
position = Vector2(-136, -40)

[node name="TowerCommandButtonAttackSlow" parent="AttackModifiers" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
price = 100
label = "Slow"

[node name="TowerCommandButtonAttackStun" parent="AttackModifiers" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
price = 200
label = "Stun"

[node name="TowerCommandButtonAttackPoison" parent="AttackModifiers" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
position = Vector2(32, 40)
price = 300
label = "Poison"

[node name="DamageModifiers" parent="." instance=ExtResource("3_1sy3o")]
unique_name_in_owner = true
visible = false
position = Vector2(-208, 32)

[node name="TowerCommandButtonDamageHeavy" parent="DamageModifiers" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
price = 50
label = "Heavy"

[node name="TowerCommandButtonDamagePiercing" parent="DamageModifiers" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
price = 100
label = "Piercing"

[node name="TowerCommandButtonDamageExplosive" parent="DamageModifiers" instance=ExtResource("3_n3e8h")]
unique_name_in_owner = true
price = 200
label = "Explosive"

[connection signal="input_event" from="Menu/Area2DUpgrade" to="." method="_on_area_2d_upgrade_input_event"]
[connection signal="mouse_entered" from="Menu/Area2DUpgrade" to="." method="_on_area_2d_upgrade_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Area2DUpgrade" to="." method="_on_area_2d_upgrade_mouse_exited"]
[connection signal="input_event" from="Menu/Area2DWeaponModifier" to="." method="_on_area_2d_weapon_modifier_input_event"]
[connection signal="mouse_entered" from="Menu/Area2DWeaponModifier" to="." method="_on_area_2d_weapon_modifier_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Area2DWeaponModifier" to="." method="_on_area_2d_weapon_modifier_mouse_exited"]
[connection signal="input_event" from="Menu/Area2DAttackModifier" to="." method="_on_area_2d_attack_modifier_input_event"]
[connection signal="mouse_entered" from="Menu/Area2DAttackModifier" to="." method="_on_area_2d_attack_modifier_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Area2DAttackModifier" to="." method="_on_area_2d_attack_modifier_mouse_exited"]
[connection signal="input_event" from="Menu/Area2DDamageModifier" to="." method="_on_area_2d_damage_modifier_input_event"]
[connection signal="mouse_entered" from="Menu/Area2DDamageModifier" to="." method="_on_area_2d_damage_modifier_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Area2DDamageModifier" to="." method="_on_area_2d_damage_modifier_mouse_exited"]
[connection signal="input_event" from="Menu/Area2DTarget" to="." method="_on_area_2d_target_input_event"]
[connection signal="mouse_entered" from="Menu/Area2DTarget" to="." method="_on_area_2d_target_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Area2DTarget" to="." method="_on_area_2d_target_mouse_exited"]
[connection signal="pressed" from="GunUpgrades/TowerCommandButtonPistol" to="." method="_on_tower_command_button_pistol_pressed"]
[connection signal="pressed" from="GunUpgrades/TowerCommandButtonSemiAutomatic" to="." method="_on_tower_command_button_semi_automatic_pressed"]
[connection signal="pressed" from="GunUpgrades/TowerCommandButtonMachineGun" to="." method="_on_tower_command_button_machine_gun_pressed"]
[connection signal="pressed" from="LaserUpgrades/TowerCommandButtonLaserShot" to="." method="_on_tower_command_button_laser_pressed"]
[connection signal="pressed" from="LaserUpgrades/TowerCommandButtonLaserBeam" to="." method="_on_tower_command_button_beam_pressed"]
[connection signal="pressed" from="LaserUpgrades/TowerCommandButtonJorb" to="." method="_on_tower_command_button_jorb_pressed"]
[connection signal="pressed" from="SwipeUpgrades/TowerCommandButtonTail" to="." method="_on_tower_command_button_tail_pressed"]
[connection signal="pressed" from="SwipeUpgrades/TowerCommandButtonBat" to="." method="_on_tower_command_button_bat_pressed"]
[connection signal="pressed" from="SwipeUpgrades/TowerCommandButtonLargeBat" to="." method="_on_tower_command_button_large_bat_pressed"]
[connection signal="pressed" from="WeaponModifiers/TowerCommandButtonWeaponSpeed" to="." method="_on_tower_command_button_weapon_speed_pressed"]
[connection signal="pressed" from="WeaponModifiers/TowerCommandButtonWeaponSpread" to="." method="_on_tower_command_button_weapon_spread_pressed"]
[connection signal="pressed" from="WeaponModifiers/TowerCommandButtonWeaponCluster" to="." method="_on_tower_command_button_weapon_cluster_pressed"]
[connection signal="pressed" from="AttackModifiers/TowerCommandButtonAttackSlow" to="." method="_on_tower_command_button_attack_slow_pressed"]
[connection signal="pressed" from="AttackModifiers/TowerCommandButtonAttackStun" to="." method="_on_tower_command_button_attack_stun_pressed"]
[connection signal="pressed" from="AttackModifiers/TowerCommandButtonAttackPoison" to="." method="_on_tower_command_button_attack_poison_pressed"]
[connection signal="pressed" from="DamageModifiers/TowerCommandButtonDamageHeavy" to="." method="_on_tower_command_button_damage_heavy_pressed"]
[connection signal="pressed" from="DamageModifiers/TowerCommandButtonDamagePiercing" to="." method="_on_tower_command_button_damage_piercing_pressed"]
[connection signal="pressed" from="DamageModifiers/TowerCommandButtonDamageExplosive" to="." method="_on_tower_command_button_damage_explosive_pressed"]
